Security admin page

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,10 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=true
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/assets/less:/assets/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.wpdev-subscribers-wp-admin=../../../wp-admin
 file.reference.wpdev-subscribers-wp-includes=../../../wp-includes
 include.path=\
