public & admin styles

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
 auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=true
-auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/assets/less:/assets/css
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/assets/less:/assets/css,/src/assets/less/public.less:/assets/css/public.css,/src/assets/less/admin.less:/assets/css/admin.css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
