--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "url": "https://github.com/jprieton/source-framework.git"
   },
   "devDependencies": {
-    "bootstrap": "^4.1.1",
-    "lesshat": "^4.1.0",
-    "popper.js": "^1.14.3"
+    "grunt": "^1.0.3",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
