--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "devDependencies": {
     "grunt": "^1.0.3",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.1.0"
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-shell": "^2.1.0"
   }
 }
