--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,8 +5,14 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/assets/less:/assets/cs
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-javascript-grunt.action_2e_build=build
+auxiliary.org-netbeans-modules-javascript-grunt.action_2e_clean=clean
+auxiliary.org-netbeans-modules-javascript-grunt.action_2e_rebuild=clean build
+browser.reload.on.save=true
+code.analysis.excludes=
 file.reference.wpdev-subscribers-wp-admin=../../../wp-admin
 file.reference.wpdev-subscribers-wp-includes=../../../wp-includes
+ignore.path=
 include.path=\
     ${php.global.include.path}:\
     ${file.reference.wpdev-subscribers-wp-admin}:\
